--- a/TodoApp/src/main/resources/application.properties
+++ b/TodoApp/src/main/resources/application.properties
@@ -1,13 +1,19 @@
-# Log format
+############################
+#                          #
+#  Logger Configuration    #
+#                          #
+############################
 # Log Level: ERROR, WARN, INFO, DEBUG or TRACE
-#
-# FATAL: Red
-# ERROR: Red
-# WARN: Yellow
-# INFO: Green
-# DEBUG: Green
-# TRACE: Green
 #
 # logging.level.root=WARN
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
+
+
+############################
+#                          #
+# Web Server Configuration #
+#                          #
+############################
+#server.port=9191
+server.contextPath=/api
