--- a/TodoApp/src/main/resources/application.properties
+++ b/TodoApp/src/main/resources/application.properties
@@ -17,3 +17,50 @@ logging.level.org.hibernate=ERROR
 ############################
 #server.port=9191
 server.contextPath=/api
+
+
+############################
+#                          #
+# DataSource Configuration #
+#                          #
+############################
+spring.datasource.url=jdbc:mysql://localhost:3306/todoappdb_dev
+spring.datasource.username=renat
+spring.datasource.password=admin
+#spring.datasource.schema=classpath:/data/schema.sql
+#spring.datasource.data=classpath:/data/data.sql
+
+
+#####################
+#                   #
+# JPA Configuration #
+#                   #
+#####################
+# validate:      validate the schema, makes no changes to the database.
+# update:        update the schema.
+# create:        creates the schema, destroying previous data.
+# create-drop:   drop the schema at the end of the session.
+# none
+##
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+########################
+#                      #
+# Application specific #
+#                      #
+########################
+#
+#admin - renat
+authentication.oauth.adminid.renat=renat
+authentication.oauth.secret.renat=admin
+authentication.oauth.tokenValidityInSeconds.renat=31557600
+#
+#client - web
+authentication.oauth.clientid.web=web
+authentication.oauth.secret.web=pass
+authentication.oauth.tokenValidityInSeconds.web=31557600
