Refactor DB to use IDs

--- a/TodoApp/src/main/resources/application.properties
+++ b/TodoApp/src/main/resources/application.properties
@@ -27,8 +27,8 @@ server.contextPath=/api
 spring.datasource.url=jdbc:mysql://localhost:3306/todoappdb_dev
 spring.datasource.username=renat
 spring.datasource.password=admin
-#spring.datasource.schema=classpath:/data/schema.sql
-#spring.datasource.data=classpath:/data/data.sql
+spring.datasource.schema=classpath:/data/schema.sql
+spring.datasource.data=classpath:/data/data.sql
 
 
 #####################
