--- a/TodoApp/src/main/resources/application.properties
+++ b/TodoApp/src/main/resources/application.properties
@@ -29,6 +29,9 @@ spring.datasource.username=renat
 spring.datasource.password=admin
 spring.datasource.schema=classpath:/data/schema.sql
 spring.datasource.data=classpath:/data/data.sql
+# Keep the connection alive if idle for a long time
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
 
 
 #####################
@@ -44,9 +47,10 @@ spring.datasource.data=classpath:/data/data.sql
 ##
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.format_sql=true
 
 
 ########################
