--- a/TodoApp/src/main/resources/application.properties
+++ b/TodoApp/src/main/resources/application.properties
@@ -6,8 +6,8 @@
 # Log Level: ERROR, WARN, INFO, DEBUG or TRACE
 #
 # logging.level.root=WARN
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=ERROR
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
 
 
 ############################
