1) created unauthenticated page; 2) created refresh token method (but not used yet);

--- a/TodoApp/src/main/resources/application.properties
+++ b/TodoApp/src/main/resources/application.properties
@@ -67,4 +67,4 @@ authentication.oauth.tokenValidityInSeconds.renat=31557600
 #client - web
 authentication.oauth.clientid.web=web
 authentication.oauth.secret.web=pass
-authentication.oauth.tokenValidityInSeconds.web=31557600
+authentication.oauth.tokenValidityInSeconds.web=10
