--- a/TodoApp/pom.xml
+++ b/TodoApp/pom.xml
@@ -24,10 +24,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- for now using spring-boot-starter-tomcat instead
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
+		</dependency> 
+		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
