Extend session to 30 mins. Hide Hibernate logs.

--- a/TodoApp/src/main/resources/application.properties
+++ b/TodoApp/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #
 # logging.level.root=WARN
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate=INFO
 
 
 ############################
@@ -48,7 +48,8 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.show-sql=true
+# Whether to enable logging of SQL statements.
+spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.format_sql=true
 
@@ -62,9 +63,9 @@ spring.jpa.hibernate.format_sql=true
 #admin - renat
 authentication.oauth.adminid.renat=renat
 authentication.oauth.secret.renat=admin
-authentication.oauth.tokenValidityInSeconds.renat=100
+authentication.oauth.tokenValidityInSeconds.renat=1800
 #
 #client - web
 authentication.oauth.clientid.web=web
 authentication.oauth.secret.web=pass
-authentication.oauth.tokenValidityInSeconds.web=100
+authentication.oauth.tokenValidityInSeconds.web=1800
