--- a/TodoApp/src/main/resources/application.properties
+++ b/TodoApp/src/main/resources/application.properties
@@ -69,3 +69,25 @@ authentication.oauth.tokenValidityInSeconds.renat=1800
 authentication.oauth.clientid.web=web
 authentication.oauth.secret.web=pass
 authentication.oauth.tokenValidityInSeconds.web=1800
+
+
+# Tried to make static data in \src\main\resources\static\webapp to Not 
+#		trigger the restart of the app when changed, but did not succeeded in it
+#		
+#		Moving resources to \src\main\webapp helped
+#
+# Locations of static resources.
+# Default is: spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/ 
+# spring.devtools.restart.exclude=static/**
+#
+# DEVTOOLS (DevToolsProperties)
+#spring.devtools.livereload.enabled=true # Enable a livereload.com compatible server.
+#spring.devtools.livereload.port=35729 # Server port.
+#spring.devtools.restart.additional-exclude= # Additional patterns that should be excluded from triggering a full restart.
+#spring.devtools.restart.additional-paths= # Additional paths to watch for changes.
+#spring.devtools.restart.enabled=true # Enable automatic restart.
+#spring.devtools.restart.exclude=META-INF/maven/**,META-INF/resources/**,resources/**,static/**,public/**,templates/**,**/*Test.class,**/*Tests.class,git.properties # Patterns that should be excluded from triggering a full restart.
+#spring.devtools.restart.poll-interval=1000 # Amount of time (in milliseconds) to wait between polling for classpath changes.
+#spring.devtools.restart.quiet-period=400 # Amount of quiet time (in milliseconds) required without any classpath changes before a restart is triggered.
+#spring.devtools.restart.trigger-file= # Name of a specific file that when changed will trigger the restart check. If not specified any classpath file change will trigger the restart.
+
