--- a/TodoApp/src/main/resources/application.properties
+++ b/TodoApp/src/main/resources/application.properties
@@ -21,6 +21,19 @@ logging.level.org.hibernate=INFO
 
 ############################
 #                          #
+# Email Configuration	   #
+#                          #
+############################
+spring.mail.host=smtp.gmail.com
+spring.mail.username=emc2.software.lab@gmail.com
+#spring.mail.password=xxxxxxxxx 
+spring.mail.password=${TODOAPP_MAIL_PASS}
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+############################
+#                          #
 # DataSource Configuration #
 #                          #
 ############################
