externalized password to email

--- a/TodoApp/src/main/resources/application.properties
+++ b/TodoApp/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 # Log Level: ERROR, WARN, INFO, DEBUG or TRACE
 #
 # logging.level.root=WARN
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
 
 
@@ -26,8 +26,7 @@ logging.level.org.hibernate=INFO
 ############################
 spring.mail.host=smtp.gmail.com
 spring.mail.username=emc2.software.lab@gmail.com
-#spring.mail.password=xxxxxxxxx 
-spring.mail.password=${TODOAPP_MAIL_PASS}
+spring.mail.password=is_overwritten_by_local_dev_props 
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 
