--- a/TodoApp/src/main/webapp/common/resources/libs/bower.json
+++ b/TodoApp/src/main/webapp/common/resources/libs/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "4.1.0",
     "jquery": "3.3.1",
     "popper.js": "1.14.0",
-    "fontawesome": "5.1.0"
+    "fontawesome": "5.1.0",
+    "oclazyload": "1.1.0"
   }
 }
