--- a/TodoApp/src/main/webapp/common/resources/libs/bower.json
+++ b/TodoApp/src/main/webapp/common/resources/libs/bower.json
@@ -21,6 +21,8 @@
     "jquery": "3.3.1",
     "popper.js": "1.14.0",
     "fontawesome": "5.1.0",
-    "oclazyload": "1.1.0"
+    "oclazyload": "1.1.0",
+    "sweetalert": "1.1.3",
+    "toaster": "2.2.0"
   }
 }
